[gd_scene load_steps=12 format=3 uid="uid://br6j4gmn3gm15"]

[ext_resource type="Script" path="res://scripts/orb.gd" id="1_fq6v1"]
[ext_resource type="Texture2D" uid="uid://bkjf5fs8qulhs" path="res://sprites/orb/orb.png" id="2_kqk1h"]
[ext_resource type="AudioStream" uid="uid://d3w2xo2ep305f" path="res://sounds/orb_emit.mp3" id="3_c34gd"]
[ext_resource type="Shader" path="res://resources/damage_flash.gdshader" id="3_vadq0"]
[ext_resource type="Texture2D" uid="uid://diw2ekosw6wff" path="res://sprites/orb/orb_impact_radius_sprite.png" id="3_w05fp"]
[ext_resource type="AudioStream" uid="uid://5rr2ysw1topc" path="res://sounds/orb_float.mp3" id="4_s70a8"]
[ext_resource type="AudioStream" uid="uid://c2tpc6opigdo2" path="res://sounds/orb_impact.mp3" id="5_2eoao"]
[ext_resource type="Texture2D" uid="uid://b0jxgraxai30x" path="res://sprites/septic_light/zone.png" id="5_8boyo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vslmt"]
radius = 87.2066

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jjwbo"]
shader = ExtResource("3_vadq0")
shader_parameter/flash_color = Color(0.168627, 0.0901961, 0.192157, 1)
shader_parameter/flash_value = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05ffy"]
shader = ExtResource("3_vadq0")
shader_parameter/flash_color = Color(0.207843, 0.109804, 0.235294, 1)
shader_parameter/flash_value = 1.0

[node name="Orb" type="Area2D" groups=["attack"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_fq6v1")

[node name="OrbImpactRadius" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CircleShape2D_vslmt")

[node name="OrbSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_kqk1h")

[node name="OrbImpactSprite" type="Sprite2D" parent="OrbSprite"]
show_behind_parent = true
material = SubResource("ShaderMaterial_jjwbo")
scale = Vector2(0.765625, 0.765625)
texture = ExtResource("5_8boyo")

[node name="OrbEmitSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_c34gd")
volume_db = -13.866

[node name="OrbFloatSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_s70a8")
volume_db = -14.222

[node name="OrbImpactSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2eoao")
volume_db = -12.404

[node name="OrbFloatTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="OrbImpactTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="OrbImpactRadiusSprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_05ffy")
scale = Vector2(0.88, 0.87)
texture = ExtResource("3_w05fp")

[connection signal="finished" from="OrbImpactSnd" to="." method="_on_orb_impact_snd_finished"]
[connection signal="timeout" from="OrbFloatTimer" to="." method="_on_orb_float_timer_timeout"]
[connection signal="timeout" from="OrbImpactTimer" to="." method="_on_orb_impact_timer_timeout"]
